# trips

./: .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  TODOS.md
backend/: .dockerignore  .env.template  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  server.py
backend/api/: __init__.py  itinerary_item.py  itinerary_participant.py  trip.py  trip_participant.py  trip_segment.py  user.py
backend/auth/: auth.py  oauth.py
backend/database/: __init__.py  config.py  crud.py  models.py
backend/migrations/: env.py
backend/migrations/versions/: 20250520_0352_86a2bf5a913b_initial.py  20250520_2356_6f98acf2011c_add_timezone_to_all_datetime_columns.py  20250521_0002_1bed9ef8155a_make_created_at_and_updated_at_.py  20250521_0134_dafee42b576b_update_user_model.py  20250523_2003_a89d32e095c0_try_to_switch_over_table_definitions.py  20250526_2131_df7900440457_try_to_update_server_defaults.py  20250606_0300_e30033d6f5aa_make_itineraryitemtype_subtypes_all_.py
backend/models/: itinerary_item.py  shared_itinerary_item_participant.py  trip.py  trip_participant.py  user.py
backend/src/: auth.py  firebase.py  server.py
backend/src/api/: __init__.py
backend/src/api/v1/: itinerary_item.py  signin.py  trip.py
backend/src/database/: config.py  models.py
backend/src/database/crud/: __init__.py  itinerary_item.py  itinerary_participant.py  trip.py  trip_participant.py  trip_segment.py  user.py
backend/src/schemas/: __init__.py  itinerary_item.py  itinerary_participant.py  trip.py  trip_participant.py  trip_segment.py  user.py
frontend/: .env.example  (+8 more)
(+24 files in other folders)
